Implemented local storage for save time

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="col">
                         <label for="shiftMinute" class="form-label">Minute</label>
                         <input
-                            type="text"
+                            type="number"
                             class="form-control"
                             id="shiftMinute"
                             aria-label="Shift Minute"
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col"></div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3" id="parentDisplay">
                 <br/>
                 <label for="loginTimeFormatted" class="form-label">Login Time</label> <br />
                 <input type="text" class="form-control" id="loginTimeFormatted" readonly/>
